Create new method signature, update tests to use new signature